<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvShippingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalles_de_envio"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/tvSelectedLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ubicacion_sin_seleccionar"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvShippingTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSelectLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_ubicacion"
        app:layout_constraintTop_toBottomOf="@id/tvSelectedLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_button"
        android:textColor="@color/textColorPrimary"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvEstimatedDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiempo_estimado_de_entrega"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/btnSelectLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnProceedToPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuar_al_pago"
        app:layout_constraintTop_toBottomOf="@id/tvEstimatedDelivery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_button"
        android:textColor="@color/textColorPrimary"
        android:layout_marginTop="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>